--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SHOPIFY_STORE=<your shop url id e.g. xqw1233-yn.myshopify.com>
-SHOPIFY_API_URL=https://xqw1233-yn.myshopify.com
+SHOPIFY_API_URL=<https://xqw1233-yn.myshopify.com>
 SHOPIFY_ACCESS_TOKEN=<your_shopify_access_token>
 SHOPIFY_LOCATION_ID=<your_shopify_location_id>
 CLD_API_URL=<cld_api_url>
@@ -7,4 +7,6 @@ CLD_USERNAME=<your_cld_username>
 CLD_PASSWORD=<your_cld_password>
 CLD_WAREHOUSE_ID=<your_cld_warehouse_id>
 CLD_API_KEY=<your_cld_api_key>
-CLD_BEARER_TOKEN=<your_cld_bearer_token>
+CRON_SEND_ALL_PRODUCTS=<true or false>
+CRON_SYNC_STOCK=<true or false>
+CRON_ORDERS_TO_CLD=<true or false>
