--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/core": "^11.1.3",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
+    "@prisma/client": "^6.16.2",
     "axios": "^1.10.0",
     "axios-retry": "^4.5.0",
     "dayjs": "^1.11.13",
@@ -27,6 +28,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.4.2",
     "jest": "^30.0.4",
+    "prisma": "^6.16.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
