--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "axios-retry": "^4.5.0",
     "dayjs": "^1.11.13",
+    "module-alias": "^2.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -35,5 +36,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
-  }
+  },
+"_moduleAliases": {
+  "src": "dist/src"
+}
 }
