- update env example

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ SHOPIFY_LOCATION_ID=<your_shopify_location_id>
 CLD_API_URL=<cld_api_url>
 CLD_USERNAME=<your_cld_username>
 CLD_PASSWORD=<your_cld_password>
-CLD_WAREHOUSE_ID=<your_cld_warehouse_id>
 CLD_API_KEY=<your_cld_api_key>
 CRON_SEND_ALL_PRODUCTS=<true or false>
 CRON_SYNC_STOCK=<true or false>
 CRON_ORDERS_TO_CLD=<true or false>
+RUN_BOOTSTRAP_SYNC=<true or false>
