--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ CRON_SEND_ALL_PRODUCTS=<true or false>
 CRON_SYNC_STOCK=<true or false>
 CRON_ORDERS_TO_CLD=<true or false>
 RUN_BOOTSTRAP_SYNC=<true or false>
+FULFILL_EXISTING_ORDERS=<true or false>
+PORT=<database_port e.g. 5432>
